--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img class="img-fluid" src="img/profile.png" alt="">
+            <img class="img-fluid" src="img/kimook.png" width="300px" height="300px" alt="">
             <div class="intro-text">
                 <span class="name">King God Emperor Majesty 황수현</span>
                 <hr class="star-light">
