--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
   
@@ -45,7 +45,7 @@
             Menu <i class="fa fa-bars"></i>
         </button>
         <div class="container">
-          <img class="navbar-brand page-scroll"  src="img/likelion_at_CBNU.png"></img>
+          <img class="navbar-brand page-scroll"  src="img/likelion_at_CBNU.png" width="100px" height="100px"></img>
             <a class="navbar-brand page-scroll" href="#page-top">멋쟁이사자처럼 5기 충북대학교</a>
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
